2002-06-03  olicha  <olivier.chapuis@free.fr>

	* fvwm/module_interface.c (make_named_packet):
	Fixed an write out of memory bug. This complete Mikhail Kruk patch
	related to named module packet

2002-06-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (focus_grab_buttons):
	* fvwm/events.c (HandleButtonPress):
	fixed problem w/ ClickToFocus + ClickToFocusRaisesOff
	fixed problem w/ ClickToFocus + ClickToFocusPassesClick

2002-06-02  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	* NEWS:
	* configure.in:
	* fvwm/Makefile.am:
	setup symlinks for fvwm-root just like for fvwm

2002-05-31  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	* libs/GetFont.c (GetFontSetOrFixed):
	Fixed some I18N_MB error messages. Removed strictly fixed code

	* fvwm/fvwm.c (main):
	Set the locale modifiers

2002-05-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (restore_focus_after_unmap):
	fixed a problem w/ colormap transition when transient window died

	* fvwm/session.c (getUniqueStateFilename):
	applied security patch by Jan Echternach

	* fvwm/fvwm.c (InitVariables):
	Properly initialise Scr.flags.is_pointer_on_this_screen

2002-05-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	allow to pass the focus click to applications and have a function bound
	to it at the same time

2002-05-19  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/builtins.c (CMD_Colorset):
	fixed a crash on a new 2.5.x Colorset syntax;
	support (kind of) this new sytax by passing it to FvwmTheme

2002-05-02  Mikhail Kruk  <meshko@cs.brandeis.edu>

	* fvwm/module_interface.c (make_named_packe):
	Fixed maximal length of a named module packet

2002-04-23  Jochen Klenner  <jochen.klenner@gmx.net>

	* fvwm/windowlist.c (CMD_WindowList):
	Added new Windowlist option CurrentAtEnd

2002-04-21  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	* NEWS:
	* fvwm/Makefile.am:
	setup fvwm and fvwm.1 symlinks for forward compatibility when installing
