@@ -49,6 +49,9 @@ Changes in stable release 2.4.8 (not released yet)
 
 * Fixed the ClickToFocusPassesClick style.
 
+* Fixed CascadePlacement for huge windows, so that the top-left
+  corner is always visible.
+
 Changes in stable release 2.4.7 (11-Apr-2002)
 
 * Fixed parsing of WindowList with conditions and a position at
