@@ -1,3 +1,9 @@
+2002-06-05  Mikhael Goikhman  <migo@homemail.com>
+
+	* fvwm/placement.c (PlaceWindow):
+	fixed CascadePlacement with huge windows (xterm -g 240x100),
+	that were aligned to bottom-right instead of top-left
+
 2002-06-03  olicha  <olivier.chapuis@free.fr>
 
 	* fvwm/module_interface.c (make_named_packet):
